@@ -1908,9 +1908,9 @@
             <td>voller Pfad inkl. Dateiname und Dateiendung </td>
           </tr>
           <tr>
-            <td>[P]</td>
+            <td>[D]</td>
             <td>.../application/</td>
-            <td>Pfad</td>
+            <td>Verzeichnis</td>
           </tr>
           <tr>
             <td>[N]</td>
