@@ -1850,9 +1850,9 @@
             <td>full path incl. filename and file extension</td>
           </tr>
           <tr>
-            <td>[P]</td>
+            <td>[D]</td>
             <td>.../application/</td>
-            <td>path</td>
+            <td>directory</td>
           </tr>
           <tr>
             <td>[N]</td>
