@@ -13,9 +13,10 @@
   CR: HTTP(S) - CGI: Not allowed/configured methods are now answered with status 405
       Previously the requests were answered with status 403.
   CR: HTTP(S) - CGI: Update of the PHP preparation
-  CR: HTTP(S) - Directory Index: Optimization
+  CR: HTTP(S) - CGI: Change of the option [P] to [D]
+  CR: HTTP(S) - Directory Index: Optimization / reduction of code
       Generation of the file list in the Generator instead of the Worker.
-  
+  CR: Worker: Optimization / reduction of code
   CR: Remote: Optimization / reduction of code
   CR: Sources: Update of the comment format
 
